--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </a>
   </div>
 <![endif]-->
-    <!--[if lt IE 8]>
+    <!--[if lt IE 9]>
    	<script type="text/javascript" src="js/html5.js"></script>
     	<link rel="stylesheet" type="text/css" media="screen" href="css/ie.css">
     <![endif]-->
@@ -32,13 +32,13 @@
 <body>
 
 <!--==============================header=================================-->
-   	<header>
+   	<div class="header">
 	    <div class="main">
         <h1><a class="logo" href="http://4pda.ru/" target="_blank">4DPA</a></h1>
       </div>
-    </header>
+    </div>
 
-    <section class="yellow_box" id="section1">
+    <div class="yellow_box" id="section1">
       <div class="main1">
         <div class="p_rel yellow_box_slider">
           <div class="p_abs del1 obj obj2 object1">
@@ -78,9 +78,9 @@
           <span class="sb special">Мужчины,</span> предложите всем своим дамам заранее задуматься над тем, что они вам подарят!
         </div>
       </div>
-    </section>
+    </div>
 
-    <section class="blue_box" id="section2">
+    <div class="blue_box" id="section2">
       <div class="main1">
         <div class="white_bg p_rel offer_text">
           <p>Зачастую 23-го февраля мужчины получают в подарок не совсем то, что хотели – пену для бритья, бритвенные станки, дезодоранты и другую банальную мелочевку, которая сразу отправляется в дальний ящик. Повезло лишь тем мужчинам, чьи дамы творчески подходят к вопросу выборы подарка. А им есть ради чего стараться – ведь в ответ, на 8 марта, они хотят получить не менее оригинальный сюрприз.</p>
@@ -101,10 +101,10 @@
 
         </div>
       </div>
-    </section>
+    </div>
 <!--==============================Device Descrition================================-->
-    <section class="device_description" id="section3">
-    	<article class="device_row">
+    <div class="device_description" id="section3">
+    	<div class="device_row">
         <div class="main">
           <div class="clearfix">
             <div class="f_left dev_col1 obj obj2 del2">
@@ -146,8 +146,8 @@
             </div>
           </div>
         </div>
-      </article>
-      <article class="device_row">
+      </div>
+      <div class="device_row">
         <div class="main">
           <div class="clearfix">
             <div class="f_left dev_col1 obj obj3 del8">
@@ -189,19 +189,19 @@
             </div>
           </div>
         </div>
-      </article>
-      <article class="device_row pad1">
+      </div>
+      <div class="device_row pad1">
         <div class="main">
           <div class="clearfix">
               <div class="f_left dev_col1 obj obj1 del16">
                 <dl class="dev_list">
-                  <dt class="bold">Превосходная функциональность.</dt>
+                  <dt class="bold">1. Превосходная функциональность.</dt>
                   <dd>Предлагают проверенные временем технологии, которые обеспечивают высокую производительность, развлечения и возможности для общения. </dd>
-                  <dt class="bold">Тонкий.</dt>
+                  <dt class="bold">2. Тонкий.</dt>
                   <dd>Оснащены DVD-приводом, но при этом толщина их корпуса составляет всего 33 мм</dd>
-                  <dt class="bold"> Все для развлечений.</dt>
+                  <dt class="bold">3. Все для развлечений.</dt>
                   <dd>Фильмы и видео отлично смотрятся на светодиодном дисплее формата Full HD а дискретная графическая плата обеспечивают четкое и контрастное изображение для всех мультимедийных файлов.</dd>
-                  <dt class="bold">Надежное хранение.</dt>
+                  <dt class="bold">4. Надежное хранение.</dt>
                   <dd>Оснащены оптическим приводом с поддержкой M-DISC™, который обеспечивает бережное хранение важных данных.</dd>
                   <dt class="bold">5. Мощность.</dt>
                   <dd>Оснащены новейшими процессорами и дискретными графическими платами, которые позволяют справиться со всеми повседневными задачами.</dd>
@@ -213,9 +213,9 @@
                     <li>
                       <img src="images/acer1.jpg" alt="">
                     </li>
-                    <li>
+                    <!-- <li>
                       <img src="images/acer2.jpg" alt="">
-                    </li>
+                    </li> -->
                     <li>
                       <img src="images/acer3.jpg" alt="">
                     </li>
@@ -235,55 +235,55 @@
               </div>
           </div>
         </div>
-      </article>
-    </section>
+      </div>
+    </div>
 <!--==============================To DO box================================-->
-    <section class="p_rel to_do" id="section4">
+    <div class="p_rel to_do" id="section4">
       <div class="main1">
         <h2 class="os bold al_center title1 obj obj1 del1">Что нужно делать дамам?</h2>
         <div class="wrapper">
-          <article class="f_left to_do_col to_do_arrow obj obj2 del3">
-            <figure class="to_do_img al_center">
+          <div class="f_left to_do_col to_do_arrow obj obj2 del3">
+            <div class="to_do_img al_center">
               <img src="images/todo_img1.png" alt="">
-              <figcaption class="os bold to_do_title">
+              <div class="os bold to_do_title">
                 Придумайте подарок
-              </figcaption>
-            </figure>
+              </div>
+            </div>
             <div class="to_do_description maxheight">
               Придумать и сделать своими руками оригинальный подарок для мужчины на 23 февраля.
             </div>
-          </article>
-          <article class="f_left to_do_col to_do_arrow obj obj2 del6">
-            <figure class="to_do_img al_center">
+          </div>
+          <div class="f_left to_do_col to_do_arrow obj obj2 del6">
+            <div class="to_do_img al_center">
               <img src="images/todo_img2.png" alt="">
-              <figcaption class="os bold to_do_title">
+              <div class="os bold to_do_title">
                 Принять участие в конкурсе
-              </figcaption>
-            </figure>
+              </div>
+            </div>
             <div class="to_do_description maxheight">
                Опубликовать фото своей работы в <a href="#" class="link">специальной теме конкурса</a> соблюдая все условия и ограничения.
             </div>
-          </article>
-          <article class="f_left to_do_col obj obj2 del9">
-            <figure class="to_do_img al_center">
+          </div>
+          <div class="f_left to_do_col obj obj2 del9">
+            <div class="to_do_img al_center">
               <img src="images/todo_img3.png" alt="">
-              <figcaption class="os bold to_do_title">
+              <div class="os bold to_do_title">
                 Выиграть <br> приз
-              </figcaption>
-            </figure>
+              </div>
+            </div>
             <div class="to_do_description maxheight">
                Удивить жюри и выиграть один из замечательных призов от 
 спонсоров проекта «Подарок настоящему мужчине».
             </div>
-          </article>
+          </div>
         </div>
       </div>
       <div class="big_btn_wrap  obj obj1 del12">
         <a href="#" class="os bold big_btn">Принять участие в конкурсе!</a>
       </div>
-    </section>
+    </div>
 <!--==============================Rules box================================-->
-    <section class="rules_box" id="section5">
+    <div class="rules_box" id="section5">
       <div class="main1">
         <div class="p_rel timing_box">
           <div class="timing_stripe"></div>
@@ -326,41 +326,41 @@
           </dl>
         </div>
       </div>
-    </section>
+    </div>
 <!--============================== Brands Box================================-->
-    <section class="brands_box" id="section6">
+    <div class="brands_box" id="section6">
       <div class="main">
         <div class="clearfix brand_cols">
-          <article class="brand_col f_left brand_col1 obj obj2 del2">
-            <figure class="logo_box">
+          <div class="brand_col f_left brand_col1 obj obj2 del2">
+            <div class="logo_box">
               <a href="http://www.prestigio.ru/ " target="_blank"><img src="images/prestigio_brand.png" alt=""></a>
-            </figure>
+            </div>
             <div class="brand_content">
               Prestigio - это динамичный и быстро развивающийся европейский бренд, представленный 32 офисами и продающийся в 75 странах по всему миру. Prestigio все чаще входит в число зарекомендовавших себя брендов на развивающихся рынках региона EMEA (Европа, Ближний Восток и Африка). С 2011 года Prestigio является ведущим брендом в GPS-навигации в Центральной и Восточной Европе, России и странах СНГ, а также неизменно входит в тройку лидеров среди планшетных ПК в регионе.
             </div>
-          </article>
-          <article class="brand_col f_left brand_col2 obj obj1 del4">
-            <figure class="logo_box">
+          </div>
+          <div class="brand_col f_left brand_col2 obj obj1 del4">
+            <div class="logo_box">
               <a href="http://www.philips.ru/" target="_blank"><img src="images/philips_brand.png" alt=""></a>
-            </figure>
+            </div>
             <div class="brand_content">
               WOOX Innovations разрабатывает инновации в сфере «подключенных развлечений». Высокое качество звука, передовые технологии и утонченный дизайн – главные инструменты для того, чтобы удовлетворить и превзойти ожидания покупателей. С головным офисов в Гонконге и более 2 000 сотрудниками по всему миру, WOOX Innovations разрабатывает и продвигает продукцию под торговой маркой Philips в категориях аудио, видео, мультимедиа и аксессуаров по всему миру. WOOX Innovations является дочерней компанией Royal Philips N.V
             </div>
-          </article>
-          <article class="brand_col f_left brand_col3 obj obj3 del5">
-            <figure class="logo_box">
+          </div>
+          <div class="brand_col f_left brand_col3 obj obj3 del5">
+            <div class="logo_box">
               <a href="http://www.acer.ru/" target="_blank"><img src="images/acer_brand.png" alt=""></a>
-            </figure>
+            </div>
             <div class="brand_content">
               Компания Acer специализируется на исследовании, дизайне, маркетинге, продажах и технической поддержке инновационных продуктов, призванных улучшать жизнь людей. Зеленая цепочка поставок Acer предоставляет дружественные по отношению к окружающей среде ПК, ноутбуки, дисплеи, проекторы, серверы, планшеты и смартфоны. Acer занимает третье место в мире по поставкам ноутбуков (согласно данным агентства IDC за 2012 год). Корпорация Acer насчитывает 8 000 сотрудников по всему миру. Её выручка за 2011 год составила 15,7 млрд. долларов США.
             </div>
-          </article>
+          </div>
         </div>
         <div class="big_btn_wrap1 obj obj1 del6">
           <a href="#" class="os bold big_btn">Принять участие в конкурсе!</a>
         </div>
       </div>
-    </section>
+    </div>
     
 </body>
 </html>
