--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     	<div class="device_row">
         <div class="main">
           <div class="clearfix">
-            <div class="f_left dev_col1 obj obj1">
+            <div class="f_left dev_col1">
               <dl class="dev_list">
                 <dt class="bold">1. Яркое и четкое изображение.</dt>
                 <dd>Удобный 7,85-дюймовый IPS-экран с <br> разрешением 1024х768 обладает высокой контрастностью.</dd>
@@ -121,7 +121,7 @@
                 <dd>Оригинальный строгий дизайн ультратонкого алюминиевого корпуса напоминает огранку бриллианта.</dd>
               </dl>
             </div>
-            <div class="f_left dev_col2  obj obj1">
+            <div class="f_left dev_col2">
               <div class="flexslider" id="slider_1">
                 <ul class="slides">
                   <li>
@@ -150,7 +150,7 @@
       <div class="device_row">
         <div class="main">
           <div class="clearfix">
-            <div class="f_left dev_col1 obj obj2">
+            <div class="f_left dev_col1">
               <dl class="dev_list">
                 <dt class="bold">1. Сверхчеткое воспроизведение видео.</dt>
                 <dd>Интеллектуальный процессор CinemaPerfect HD снижает шумы и делает изображение четче.</dd>
@@ -164,7 +164,7 @@
                 <dd>Созданы с использованием технологии защиты от помех и обеспечивают объемный звук без мотков проводов.</dd>
               </dl>
             </div>
-            <div class="f_left p_top2 dev_col2 obj obj2">
+            <div class="f_left p_top2 dev_col2">
               <div class="flexslider ind1" id="slider_2">
                 <ul class="slides">
                   <li>
@@ -193,7 +193,7 @@
       <div class="device_row pad1">
         <div class="main">
           <div class="clearfix">
-              <div class="f_left dev_col1 obj obj3">
+              <div class="f_left dev_col1">
                 <dl class="dev_list">
                   <dt class="bold">1. Превосходная функциональность.</dt>
                   <dd>Предлагают проверенные временем технологии, которые обеспечивают высокую производительность, развлечения и возможности для общения. </dd>
@@ -207,7 +207,7 @@
                   <dd>Оснащены новейшими процессорами и дискретными графическими платами, которые позволяют справиться со всеми повседневными задачами.</dd>
                 </dl>
               </div>
-              <div class="f_left dev_col2 obj obj3">
+              <div class="f_left dev_col2">
                 <div class="flexslider" id="slider_3">
                   <ul class="slides">
                     <li>
