--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=980">
+    <link rel="stylesheet" type="text/css" media="screen" href="css/countdown.css">
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
     <script src="js/jquery.js"></script>
     <script src="js/jquery-migrate-1.2.1.js"></script>
@@ -24,10 +25,16 @@
     </a>
   </div>
 <![endif]-->
-    <!--[if lt IE 9]>
-   	<script type="text/javascript" src="js/html5.js"></script>
-    	<link rel="stylesheet" type="text/css" media="screen" href="css/ie.css">
-    <![endif]-->
+  <!--[if lte IE 8]>
+    <link rel="stylesheet" href="css/style4ie.css">
+  <![endif]-->
+  <!--[if lt IE 9]>
+  <script type="text/javascript" src="js/html5.js"></script>
+  	<link rel="stylesheet" type="text/css" media="screen" href="css/ie.css">
+  <![endif]-->
+  <!--[if gte IE 9]>
+    <link rel="stylesheet" href="css/style4ieM.css">
+  <![endif]-->
 </head>
 <body>
 
